0.9.87
======

 -

0.9.86
======

 - Comment on stories

0.9.85
======

 - Send trades to your groups
 - Invite people to your reminders
 - Send drawings

0.9.84
======

 - Add pages to your homescreen
 - Trade from your groups
 - View trade history
 - Trade notes

0.9.83
======

 - Improved onboarding
 - View stories on profiles
 - Embed webpages in pages
 - Select partial text in messages

0.9.82
======

 - Manage group settings
 - See who hosts the group
 - Link previews in messages
 - Edit messages
 - View script source
 - React to stories

0.9.81
======

 - Equip items

0.9.80
======

 - View and edit your scripts

0.9.79
======

 - Script widgets

0.9.78
======

 - Drop items on the map

0.9.77
======

 - Improved map experience
 - See people's subscriber and stories count

0.9.76
======

 - Subscribe to people to get new story notifications
 - Group calls
 - See trade members

0.9.75
======

 - Create and mint your own items
 - Trade items with other people
 - See your inventory

0.9.74
======

 - Improved support for reminders

0.9.73
======

 - Improved page toolbar
 - Generate photos in messages
 - Take photos with your camera
 - Set group photo
 - Set group background

0.9.72
======

 - See groups on profiles
 - Add rich content to your profile

0.9.71
======

 - See groups you have in common with a friend
 - Set pay rate

0.9.70
======

 - See active friends
 - Add group pages
 - Set group category

0.9.69
======

 - Add widgets to page content

0.9.68
======

 - Add additional content to pages

0.9.67
======

 - Mention open groups in stories

0.9.66
======

 - Snooze group notifications
 - Pages are now created after entering the details
 - It is now possible to swipe between screens

0.9.65
======

 - Fixed crash saving images to device
 - Fixed bug where pages would load forever
 - Added caching on main screens

0.9.64
======

 - Improved map integration

0.9.62
======

 - Discover local groups, pages, and stories