@@ -113,7 +113,7 @@
     <string name="set_my_location">Set my location</string>
     <string name="reset_location">Reset location</string>
     <string name="no_groups_to_show">No groups to show.</string>
-    <string name="new_group">Create group</string>
+    <string name="create_group">Create group</string>
     <string name="new_group_with_person">Create group with %1$s</string>
     <string name="new_group_with_people">Create group with %1$s and %2$s</string>
     <string name="new_group_with_x_people">Create group with %1$s people</string>
