@@ -1,6 +1,7 @@
 0.9.87
 ======
 
+ - Option to show group cover photos in page content
  -
 
 0.9.86
